# ooc

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Int.c  Makefile  Makefile.am  Makefile.in  README.md  README.rst  aclocal.m4  api.html  config.h.in  configure  configure.ac  genindex.html  hashmap.c  hashmap.html  index.html  intro.html  main.c  object.c  object.h  object_internal.html  objects.inv  package.yml  person.c  person.h  point.c  point.h  rtp.c  search.html  searchindex.js  string.c  technical.html  unit_testing.html
_sources/: api.rst.txt  index.rst.txt  object_internal.rst.txt  technical.rst.txt
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
docs/: conf.py  doxyfile  hashmap.rst  index.rst  intro.rst  object_internal.rst  technical.rst  unit_testing.rst
docs/_build/html/: .buildinfo  searchindex.js
docs/_build/html/_sources/: api.txt  heap.txt  implementation.txt  index.txt
docs/_build/latex/: fitbit.idx
docs/docs/html/: Int_8c.html  Int_8c_source.html  Int_8h.html  Int_8h_source.html  README_8md.html  README_8md_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_835e52100f67d4a26caaf16568a08a31.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__basic.html  group__collection.html  group__common.html  group__low.html  hashmap_8c.html  hashmap_8c_source.html  hashmap_8h.html  hashmap_8h_source.html  index.html  iterator_8c.html  iterator_8c_source.html  list_8c.html  list_8c_source.html  list_8h.html  list_8h_source.html  main_8c.html  main_8c_source.html  math_8c.html  math_8c_source.html  math_8h.html  math_8h_source.html  (+47 more)
docs/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  (+53 more)
docs/docs/latex/: Int_8c.tex  Int_8h.tex  README_8md.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_835e52100f67d4a26caaf16568a08a31.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__basic.tex  group__collection.tex  group__common.tex  group__low.tex  hashmap_8c.tex  hashmap_8h.tex  index.tex  iterator_8c.tex  list_8c.tex  list_8h.tex  main_8c.tex  math_8c.tex  math_8h.tex  md__Users_igutek_Documents_Projects_ooc_README.tex  modules.tex  object_8c.tex  object_8h.tex  object__internal_8h.tex  object__va__args_8h.tex  person_8c.tex  person_8h.tex  point_8c.tex  point_8h.tex  refman.tex  string_8c.tex  string_8h.tex  structHashItem.tex  structHashMap.tex  structHashMapClass.tex  structHashMapClass__iter.tex  structHashMap__iter.tex  structInt.tex  (+16 more)
docs/docs/xml/: Int_8c.xml  Int_8h.xml  README_8md.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_835e52100f67d4a26caaf16568a08a31.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  group__basic.xml  group__collection.xml  group__common.xml  group__low.xml  hashmap_8c.xml  hashmap_8h.xml  index.xml  indexpage.xml  iterator_8c.xml  list_8c.xml  list_8h.xml  main_8c.xml  math_8c.xml  math_8h.xml  md__Users_igutek_Documents_Projects_ooc_README.xml  object_8c.xml  object_8h.xml  object__internal_8h.xml  object__va__args_8h.xml  person_8c.xml  person_8h.xml  point_8c.xml  point_8h.xml  string_8c.xml  string_8h.xml  structHashItem.xml  structHashMap.xml  structHashMapClass.xml  structHashMapClass__iter.xml  structHashMap__iter.xml  structInt.xml  structIntClass.xml  structList.xml  structListClass.xml  (+13 more)
examples/: Makefile.in  config.status  configure  configure.ac  count_words.c
examples/autom4te.cache/: output.1  traces.1
examples/src/: Makefile.in  main
include/: obj_hashmap.h  obj_person.h  obj_rtp.h  obj_string.h  object.h
include/ooc/: Int.h  file.h  hashmap.h  int.h  list.h  math.h  object.h  object_va_args.h  ooc.h  person.h  point.h  string.h  trait_math.h  tuple.h
libooc/: Makefile.in  config.status  configure  configure.ac
libooc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
libooc/src/: Makefile.am  Makefile.in  main.c  object.c  object.h  string.c
libooc/tests/: Makefile  Makefile.am  Makefile.in  check_string  check_string.c
src/: Int.c  Int.h  Makefile.am  Makefile.in  file.c  hashmap.c  hashmap.h  int.c  iterator.c  list.c  main.c  math.c  object.c  object_internal.h  ooc.c  person.c  point.c  point.h  string.c  string.h  trait_file.c  trait_file.h  trait_math.c  trait_math.h  trait_math_internal.h  trait_string.c  trait_string.h  tuple.c
tests/: check_count_words.c  check_count_words.h  check_file.c  check_file.h  check_hashmap.c  check_hashmap.h  check_int.c  check_int.h  check_list.c  check_list.h  check_main.c  check_string  check_string.c  check_string.h  check_tuple.c  check_tuple.h  check_utils.c  check_utils.h
tests/test_files/: test-1.txt
(+51 files in other folders)
