lib_LIBRARIES = libooc.a
libooc_a_SOURCES = object.c object.h \
                   string.c string.h \
				   hashmap.c hashmap.h \
				   point.c point.h \
				   person.c person.h \
				   Int.c Int.h
pkginclude_HEADERS = 	 object.h \
						 string.h \
						 hashmap.h \
						 point.h \
						 person.h \
						 Int.h 
